# ansys-tools-visualization-interface

./: .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  README.rst  index.html  pyproject.toml  readme.rst  robots.txt  sitemap.xml  tox.ini  versions.json
.github/: CODEOWNERS  dependabot.yml  labeler.yml  labels.yml
.github/workflows/: ci_cd.yml  label.yml
.superpowers/sdd/: progress.md  task-1-brief.md  task-1-report.md  task-2-brief.md  task-2-report.md  task-2-review-pkg.diff  task-3-brief.md  task-3-report.md  task-3-review-pkg.diff  task-4-brief.md
doc/: .vale.ini  Makefile  make.bat
doc/changelog.d/: 100.dependencies.md  103.fixed.md  104.fixed.md  105.dependencies.md  112.changed.md  113.dependencies.md  114.dependencies.md  118.added.md  119.fixed.md  120.dependencies.md  125.dependencies.md  127.dependencies.md  132.documentation.md  135.fixed.md  137.dependencies.md  140.fixed.md  142.fixed.md  143.dependencies.md  144.dependencies.md  146.dependencies.md  147.dependencies.md  149.dependencies.md  151.dependencies.md  154.fixed.md  156.fixed.md  158.dependencies.md  159.maintenance.md  161.maintenance.md  164.fixed.md  165.fixed.md  166.dependencies.md  171.dependencies.md  172.fixed.md  175.added.md  178.fixed.md  179.fixed.md  180.added.md  182.dependencies.md  183.dependencies.md  184.maintenance.md  (+247 more)
doc/source/: conf.py  contributing.rst  index.rst  sg_execution_times.rst
doc/source/getting_started/: index.rst
doc/source/user_guide/: index.rst  migration.rst  usdviewer.rst
docs/superpowers/plans/: 2026-07-16-consolidate-usd-html-export.md  2026-07-16-usd-to-html-export.md
docs/superpowers/specs/: 2026-07-16-usd-to-html-export-design.md
examples/: README.txt
examples/00-basic-examples/: README.txt  clipping_plane.py  picker.py  plain_usage.py  using_meshobject.py
examples/00-basic-pyvista-examples/: README.txt  animation.py  clipping_plane.py  custom_picker.py  customization_api.py  dynamic_tree_menu_demo.py  picker.py  plain.py  plain_usage.py  qt_backend.py  remote_trame_view.py  toggle_subtree_separated.py  tree_menu.py  tree_struct.py  using_meshobject.py
examples/01-advanced-pyansys-examples/: using_meshobject_with_field_data.py
examples/01-basic-plotly-examples/: README.txt  customization_api.py  dash-usage.py  name-filter.py  plain-usage.py
examples/02-basic-usd-examples/: README.txt  plain_usage.py  usd_to_html_export.py
examples/99-advanced-pyansys-examples/: README.txt  using_meshobject_with_field_data.py
src/ansys/visualizer/: __init__.py  colors.py  plotter.py  plotter_helper.py  plotter_types.py  pyvista_interface.py
tests/: conftest.py  test_animation.py  test_customization_api.py  test_generic_plotter.py  test_interactables.py  test_meshobject.py  test_plotly_backend.py  test_plotting_options.py  test_tree_visibility.py  test_usd_html_export.py  test_usd_html_export_decoupled.py  test_usd_html_export_integration.py  test_usd_interface.py  test_vtkhdf_converter.py
version/: index.html
version/0.1/: .buildinfo  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
version/0.1/_sources/: contributing.rst.txt  sg_execution_times.rst.txt
version/0.1/api/: index.html
version/0.1/examples/: index.html  sg_execution_times.html
version/0.1/getting_started/: index.html
version/0.1/user_guide/: index.html
version/0.10/: contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
version/0.10/_sources/: sg_execution_times.rst.txt
version/0.10/_static/: search.json  static_viewer.html
version/0.10/api/: index.html
version/0.10/examples/: index.html  sg_execution_times.html
version/0.10/getting_started/: index.html
version/0.10/user_guide/: index.html
version/0.11/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
version/0.11/_sources/: sg_execution_times.rst.txt
version/0.12/: contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/0.13/: index.html  objects.inv  search.html  sg_execution_times.html
version/0.14/: contributing.html  genindex.html  index.html  searchindex.js  sg_execution_times.html
version/0.2/: .buildinfo  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
version/0.3/: .buildinfo  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
version/0.4/: contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
version/0.5/: contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
version/0.6/: contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
version/0.7/: contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
version/0.8/: contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
version/1.0.0a0/: contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
version/1.0.0a1/: contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
version/dev/: .buildinfo  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
version/stable/: .buildinfo  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
(+2182 files in other folders)
