[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyansys-visualizer"
version = "0.1.dev0"
description = "A python visualizer for PyAnsys libraries"
readme = "README.rst"
requires-python = ">=3.9,<4"
license = { file = "LICENSE" }
authors = [{ name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }]
maintainers = [{ name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyvista >= 0.42.0",
    "beartype >= 0.17.0",
]

[project.optional-dependencies]

test = [
    "pytest==7.4.4",
    "pytest-pyvista==0.1.9",
    "pytest-cov==4.1.0",
]

docs = [
    "ansys-sphinx-theme==0.14.0",
    "jupyter_sphinx==0.5.3",
    "jupytext==1.16.1",
    "nbsphinx==0.9.3",
    "numpydoc==1.6.0",
    "sphinx==7.2.6",
    "sphinx-autoapi==3.1.a2",
    "sphinx-copybutton==0.5.2",
    "sphinx_design==0.5.0",
    "sphinx-jinja==2.0.2",
]

[tool.flit.module]
name = "ansys.visualizer"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.pytest.ini_options]
addopts = "-ra --cov=ansys.visualizer --cov-report html:.cov/html --cov-report xml:.cov/xml --cov-report term -vv --image_cache_dir tests/_image_cache --add_missing_images"
