[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ansys-tools-visualization-interface"
version = "0.1.dev0"
description = "A Python visualization interface for PyAnsys libraries"
readme = "README.rst"
requires-python = ">=3.9,<4"
license = { file = "LICENSE" }
authors = [{ name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }]
maintainers = [{ name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyvista >= 0.42.0",
    "beartype >= 0.17.0",
    "websockets >= 12.0",
]

[project.optional-dependencies]

tests = [
    "pytest==8.1.1",
    "pytest-pyvista==0.1.9",
    "pytest-cov==5.0.0",
]

doc = [
    "ansys-sphinx-theme==0.15.2",
    "jupyter_sphinx==0.5.3",
    "jupytext==1.16.1",
    "nbsphinx==0.9.3",
    "numpydoc==1.7.0",
    "sphinx==7.3.7",
    "sphinx-autoapi==3.1.0b0",
    "sphinx-copybutton==0.5.2",
    "sphinx_design==0.5.0",
    "sphinx-gallery==0.15.0",
    "sphinx-jinja==2.0.2",
]

[tool.flit.module]
name = "ansys.tools.visualization_interface"

[tool.black]
line-length = 100
indent-width = 4

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.pytest.ini_options]
addopts = "-ra --cov=ansys.tools.visualization_interface --cov-report html:.cov/html --cov-report xml:.cov/xml --cov-report term -vv --image_cache_dir tests/_image_cache --add_missing_images"

[tool.ruff]
line-length = 120
extend-exclude = [
    "examples/**/*.py",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle, see https://beta.ruff.rs/docs/rules/#pycodestyle-e-w
    "D",    # pydocstyle, see https://beta.ruff.rs/docs/rules/#pydocstyle-d
    "F",    # pyflakes, see https://beta.ruff.rs/docs/rules/#pyflakes-f
    "I",    # isort, see https://beta.ruff.rs/docs/rules/#isort-i
    "N",    # pep8-naming, see https://beta.ruff.rs/docs/rules/#pep8-naming-n
    "PTH",  # flake8-use-pathlib, https://beta.ruff.rs/docs/rules/#flake8-use-pathlib-pth
]
ignore = [
    "D416",
]


[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
line-ending = "auto"


[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["ansys"]

[tool.ruff.lint.pydocstyle]
# Settings: https://docs.astral.sh/ruff/settings/#lintpydocstyle
convention = "google"

